proto/css/src/_hack.ie.less
/*################################*\
    anakin  |  _hack.ie.less
\*################################*/


// IE fixes go here. These styles should *only* be rendered on IE!
// Using the -ms-high-contrast quirk: only IE supports -ms-high-contrast
///////////////////////////////////////////////////////////////////////////////


@media (-ms-high-contrast: none), (-ms-high-contrast: active) {
@p-lh: 1.5rem; // fallback for var(--lh)



.mx-clearfix() {
  &::after {
    content: '';
    display: block;
    clear: both;
  }
}

.o-Grid--represent,
.o-Grid--members {
  .mx-clearfix();
  & > li.o-Grid__Item {
    @media (min-width: 30em) {
    float: left;
    width: 33.333333%;
    }
  }
}

.o-Grid--publications,
.o-Grid--homeActions,
.o-Grid--jobs,
.o-Grid--whatsHappening {
  .mx-clearfix();
  & > li.o-Grid__Item {
    @media (min-width: 45em) {
    float: left;
    width: 50%;
    }
  }
}

.o-Grid--foundation {
  text-align: center;
}

.o-Grid--portals {
  .mx-clearfix();
  & > li.o-Grid__Item {
    @media (min-width: 30em) {
      float: left;
      width: 50%;
    }
    @media (min-width: 45em) {
      width: 33.333333%;
    }
  }
}

.c-BigAssIcon {
  margin: auto;
}

.c-LinkList__Item {
  margin-bottom: (0.5 * @g-lh);
}

.c-Portal__List {
  section& {
    min-height: (8 * @p-lh);
  }
}

.c-ArticleTeaser {
  .mx-clearfix();
}

.c-Pub__Body,
.c-MemberStory__Quote {
  clear: both;
}

.c-Pub__Img,
.c-ArticleTeaser__Img,
.c-MemberStory__Img {
  float: left;
}

.c-Pub__Img {
  @media (min-width: 30em) {
    max-width: 33.333%;
  }
  @media (min-width: 45em) {
    max-width: 50%;
  }
}

.c-ArticleTeaser__Img {
  li:not(:first-of-type) & {
  max-width: 33.333%;
  }
}

.c-MemberStory__Img {
  max-width: 50%;
}






                                                               }

